force-app/main/default/objects/Order_Process_Event__e/Order_Process_Event__e.object-meta.xml
<CustomObject>
    <label>Order Process Event</label>
    <pluralLabel>Order Process Events</pluralLabel>
</CustomObject>