force-app/main/default/objects/Order_Process_Event__e/fields/Message_c__c.field-meta.xml
<CustomField>
    <fullName>Message_c__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>