force-app/main/default/objects/Order_Process_Event__e/fields/OrderId_c__c.field-meta.xml
<CustomField>
    <fullName>OrderId_c__c</fullName>
    <label>OrderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>