force-app/main/default/objects/Order_Process_Event__e/fields/Status_c__c.field-meta.xml
<CustomField>
    <fullName>Status_c__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>